Add FontAwesome, navbar & json debug

--- a/DatabaseDesigner.Wasm/_Imports.razor
+++ b/DatabaseDesigner.Wasm/_Imports.razor
@@ -8,3 +8,10 @@
 @using Microsoft.JSInterop
 @using DatabaseDesigner.Wasm
 @using DatabaseDesigner.Wasm.Layouts
+@using DatabaseDesigner.Wasm.Components
+@using Blazor.Diagrams.Core;
+@using Blazor.Diagrams.Core.Models;
+@using Blazor.Diagrams.Components;
+@using Blazor.Diagrams.Components.Base;
+@using DatabaseDesigner.Core.Models;
+@using Blazor.Diagrams.Core.Extensions;
