--- a/DatabaseDesigner.Wasm/Pages/Index.razor
+++ b/DatabaseDesigner.Wasm/Pages/Index.razor
@@ -1,3 +1,18 @@
 ﻿@page "/"
 
-<button class="btn btn-primary">Test</button>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <span class="navbar-brand" href="#">Database Designer</span>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#" @onclick="ShowJson">Show JSON</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="diagram-container">
+    <CascadingValue Name="DiagramManager" Value="Diagram">
+        <DiagramCanvas></DiagramCanvas>
+    </CascadingValue>
+</div>
