--- a/DatabaseDesigner.Wasm/Components/Diagram/TableNode.razor
+++ b/DatabaseDesigner.Wasm/Components/Diagram/TableNode.razor
@@ -1,38 +1,16 @@
-﻿@inherits NodeWidgetBaseComponent<TableModel>
-
-<div class="node @(Node.Selected ? "selected" : "")"
-     @onmousedown="OnMouseDown"
-     @onmousedown:stopPropagation
-     @ref="element"
-     style="top: @(Node.Position.Y.ToInvariantString())px;
-            left: @(Node.Position.X.ToInvariantString())px">
-    <div class="card" style="width: 320px;">
-        <div class="card-header d-flex justify-content-between align-items-center">
-            @* Name input *@
-            <input type="text" class="form-control fully-transparent mr-3" @bind="Node.Name" @bind:event="oninput"
-                   @onmousedown:stopPropagation />
-            @* Actions *@
-            <div class="dropdown">
-                <a class="fully-transparent" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fa fa-chevron-down"></i>
-                </a>
-                <div class="dropdown-menu">
-                    <h6 class="dropdown-header">Actions</h6>
-                    <a class="dropdown-item" href="#">Add column</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Supprimer</a>
-                </div>
-            </div>
-        </div>
-        <ul class="list-group list-group-flush">
-            @foreach (var column in Node.Columns)
-            {
-                <TableColumn Data="column"></TableColumn>
-            }
-        </ul>
+﻿<div class="card @(Node.Selected ? "selected" : "")" style="width: 320px;">
+    <div class="card-header">
+        <h6 class="mb-0">@Node.Name</h6>
     </div>
+    <ul class="list-group list-group-flush">
+        @foreach (var column in Node.Columns)
+        {
+            <TableColumn Data="column"></TableColumn>
+        }
+    </ul>
+
     @foreach (var port in Node.Ports)
     {
-        <PortWidget Port="port" />
+        <PortRenderer Port="port" />
     }
 </div>
