--- a/DatabaseDesigner.Wasm/Pages/Index.razor
+++ b/DatabaseDesigner.Wasm/Pages/Index.razor
@@ -4,7 +4,10 @@
     <span class="navbar-brand" href="#">Database Designer</span>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
+                <a class="nav-link" href="#" @onclick="NewTable">New table</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="#" @onclick="ShowJson">Show JSON</a>
             </li>
         </ul>
