Add ability to change column type

--- a/DatabaseDesigner.Wasm/Components/Sidebar.razor
+++ b/DatabaseDesigner.Wasm/Components/Sidebar.razor
@@ -11,12 +11,11 @@
             <label for="tableName">Table name</label>
             <input id="tableName" type="text" class="form-control" value="@_selectedTable.Name" @oninput="OnTableNameChanged" />
         </div>
-        <table class="table">
+        <table class="table" cellspacing="0">
             <thead>
                 <tr>
                     <th>Column</th>
                     <th>Type</th>
-                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -27,7 +26,7 @@
                             <input type="text" class="form-control" value="@column.Name" @oninput="e => OnColumnNameChanged(e, column)" />
                         </td>
                         <td>
-                            <select class="form-control column-type">
+                            <select class="form-control column-type" @onchange="e => OnColumnTypeChanged(e, column)">
                                 @foreach (var val in Enum.GetValues(typeof(ColumnType)).Cast<ColumnType>())
                                 {
                                     <option selected="@(column.Type == val)">@val</option>
