--- a/DatabaseDesigner.Wasm/Pages/Index.razor
+++ b/DatabaseDesigner.Wasm/Pages/Index.razor
@@ -10,6 +10,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#" @onclick="ShowJson">Show JSON</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" @onclick="Debug">DEBUG</a>
+            </li>
         </ul>
     </div>
 </nav>
