--- a/DatabaseDesigner.Wasm/Components/Diagram/TableColumn.razor
+++ b/DatabaseDesigner.Wasm/Components/Diagram/TableColumn.razor
@@ -7,10 +7,10 @@
     {
         <i class="fas fa-key mr-2 text-warning"></i>
     }
-    else if (IsReferenceKey)
+    else if (HasLinks)
     {
         <i class="fas fa-key mr-2 text-secondary"></i>
     }
-    <span class="text-primary @(Column.Primary || IsReferenceKey ? "" : "ml-4")">@Column.Type.ToString()</span>
+    <span class="text-primary @(Column.Primary || HasLinks ? "" : "ml-4")">@Column.Type.ToString()</span>
     @Column.Name
 </li>
