--- a/DatabaseDesigner.Wasm/Pages/Index.razor
+++ b/DatabaseDesigner.Wasm/Pages/Index.razor
@@ -18,7 +18,7 @@
 </nav>
 
 <div class="wrapper">
-    <CascadingValue Name="DiagramManager" Value="Diagram">
+    <CascadingValue Value="Diagram">
         <div class="diagram-container">
             <DiagramCanvas></DiagramCanvas>
         </div>
